
      b) For checking the contents of the output stream, use:

           expect (...).to_output "exact content"
           expect (...).to_output_containing  "substring"
           expect (...).to_output_matching "pattern"

      d) To require zero exit status with specified output stream
         contents:

           expect (...).to_succeed_with "exact content"

      c) To check the standard error stream instead:

           expect (...).to_output_error "exact content"
           expect (...).to_output_error_containing  "substring"
           expect (...).to_output_error_matching "pattern"

      e) To require zero exit status with specified error stream
         contents:

           expect (...).to_fail_with "exact content"

** Incompatible changes:

  - Invoking `specl` with no filename arguments no longer reads specs
    from standard input.  You must explicitly pass a "-" argument to get
    that behaviour.

  - RSpec has been moving from expressing `should_` expectations to
    using `to_` for technical reasons.  Specl now uses `to_` throughout,
    not for technical reasons, but because:

      (i) expectations almost always read better with `to_` instead of
          `should_`;
     (ii) it's shorter and easier to type, so is less "noisy" in among
          the important surrounding arguments.

    There are no plans to remove `should_` from Specl, so you can expect
    to safely continue to use your existing spec files indefinitely: But
    all mention of `should_` has been removed from documentation, and I
    recommend you use `to_` for new spec files for the reasons above.

  - The number of matchers in `specl.shell` is now large enough that
    the arbitrary names are hard to remember without looking them up,
    so they now follow a consistent naming convention, which required
    renaming some matchers.  If you have been using the undocumented
    names please rename the following accordingly in your spec files